[⚙️ chore] main 브랜치로 머지 시 액션 실행 테스트2 (#25)
* [⚙️ chore] chromatic 통한 storybook CI/CD 구축 (#11) (#12)

* chore: chromatic 의존성 추가 (#11)

* chore: 노드 버전 통일을 위한 nvmrc 파일 추가 (#11)

* chore: chromatic 워크플로우 파일 추가 (#11)

* feat: 워크플로우 액션을 위한 stories 파일 수정 (#11)

* fix: chromatic workflow 파일에서 node version을 명시하는 파일을 알리기 위한 키 값 수정 (#11)

* design: pretendard 폰트 적용 (#13) (#14)

* [🔧 fix] 빌드 시 발생하는 quot 오류 수정 (#18) (#19)

* [⚙️ chore] 깃허브 Organization 레포지토리 vercel 자동 배포 (#17) (#20)

* chore: main 브랜치에서의 CD를 위한 github actions workflow 추가 (#17)

* fix: end of line 추가 (#17)

* [⚙️ chore] MSW 초기 설정 (#23)

* feat: msw 사용을 위한 serviceWorker 설치 (#16)

* feat: msw 초기 설정 및 mock api 테스트 완료 (#16)

* remove: 클라이언트 사이드에서 api route만을 호출하도록 msw의 worker.ts 제거 (#16)

* feat: 리소스 별로 handler 분리 및 index.ts에서 병합하여 server.ts에서 사용하도록 수정 (#16)

* fix: 가장 하단 라인 개행 추가하여 eol 해결 (#16)

---------

Co-authored-by: seunggeon <vgotu99@naver.com>

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.8.1",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -48,5 +49,10 @@
     "storybook": "8.6.0",
     "tailwindcss": "^4.0.9",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
